--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "express": "^4.21.2",
     "helmet": "^7.2.0",
     "lodash": "^4.17.21",
-    "login.dfe.api.auth": "github:DFE-Digital/login.dfe.api.auth#v2.3.3",
-    "login.dfe.audit.transporter": "^4.0.2",
-    "login.dfe.express-error-handling": "github:DFE-Digital/login.dfe.express-error-handling#v3.0.2",
-    "login.dfe.healthcheck": "github:DFE-Digital/login.dfe.healthcheck#v3.0.2",
+    "login.dfe.api.auth": "^2.3.4",
+    "login.dfe.audit.transporter": "^4.0.3",
+    "login.dfe.express-error-handling": "^3.0.3",
+    "login.dfe.healthcheck": "^3.0.3",
     "login.dfe.winston-appinsights": "github:DFE-Digital/login.dfe.winston-appinsights#v5.0.3",
     "node-cron": "^3.0.3",
     "pm2": "^5.4.3",
